refactor(server): remove Guava dependency as it's no longer required by LSP4J at runtime